Uso de boolean en Main